# Starship

./: .gitignore  .gitmodules  CMakeLists.txt  properties.h
.github/workflows/: android.yml  libultraship.yml  main.yml  release.yml
Android/: CMakeLists.txt  build.gradle  gradle.properties  gradlew  gradlew.bat  libultraship-readme.txt  local.properties  settings.gradle
Android/app/: CMakeLists.txt  build.gradle
Android/app/jni/: CMakeLists.txt
Android/app/jni/src/: CMakeLists.txt
Android/app/jni/src/OTRExporter/: CMakeLists.txt
Android/app/jni/src/OTRExporter/OTRExporter/: ArrayExporter.cpp  CMakeLists.txt  VtxExporter.cpp
Android/app/jni/src/ZAPDTR/ZAPD/: CMakeLists.txt  ZAPD.vcxproj  ZAPD.vcxproj.filters
Android/app/jni/src/libultraship/: CMakeLists.txt
Android/app/jni/src/libultraship/include/libultraship/: os.h
Android/app/jni/src/libultraship/src/: CMakeLists.txt  Context.cpp
Android/app/jni/src/libultraship/src/graphic/Fast3D/: gfx_opengl.cpp
Android/app/jni/src/libultraship/src/port/android/: os_stub.c
Android/app/jni/src/libultraship/src/resource/: Archive.h
Android/app/jni/src/libultraship/src/window/gui/: InputEditorWindow.cpp
Android/app/src/main/: AndroidManifest.xml
Android/app/src/main/cpp/: CMakeLists.txt  android_main.cpp  native-lib.cpp
Android/app/src/main/java/com/starship/: AssetCopyUtil.java  ControllerButtons.java  MainActivity.java  RomPickerActivity.java  RomVersionSelectorActivity.java
Android/app/src/main/java/com/starship/android/: AssetCopyUtil.java  MainActivity.java  RomPickerActivity.java
Android/app/src/main/java/org/libsdl/app/: SDLActivity.java
Android/app/src/main/res/layout/: activity_rom_picker.xml  activity_rom_version_selector.xml  touchcontrol_overlay.xml
Android/app/src/main/res/values/: strings.xml  styles.xml
android/: build.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/assets/mods/: place_mods_here.txt
android/app/src/main/java/com/starship/android/: ControllerButtons.java  DialogActivity.java  MainActivity.java
android/app/src/main/java/org/libsdl/app/: SDLActivity.java
android/app/src/main/res/drawable/: rounded_dialog_background.xml
android/app/src/main/res/layout/: touchcontrol_overlay.xml
android/app/src/main/res/values/: styles.xml
android/gradle/wrapper/: gradle-wrapper.properties
libultraship/: CMakeLists.txt
libultraship-backup/cmake/dependencies/: android.cmake
libultraship-backup/src/: Context.cpp
libultraship-backup/src/public/bridge/: crashhandlerbridge.h
libultraship-backup/src/window/gui/: ConsoleWindow.cpp  ConsoleWindow.h
libultraship/cmake/dependencies/: android.cmake  common.cmake
libultraship/include/libultraship/: bridge.h  classes.h  os.h
libultraship/src/: CMakeLists.txt  Context.cpp  Context.h
libultraship/src/controller/: SDLController.cpp  SDLController.h
libultraship/src/controller/controldevice/controller/mapping/: ControllerDefaultMappings.cpp  ControllerDefaultMappings.h  ControllerGyroMapping.h
libultraship/src/controller/controldevice/controller/mapping/factories/: GyroMappingFactory.cpp
libultraship/src/controller/controldevice/controller/mapping/sdl/: SDLGyroMapping.h  SDLMapping.h
libultraship/src/controller/deviceindex/: ControllerDisconnectedWindow.cpp
libultraship/src/graphic/Fast3D/: interpreter.cpp
libultraship/src/port/mobile/: MobileImpl.cpp  imgui_impl_sdl2.cpp
libultraship/src/public/bridge/: crashhandlerbridge.cpp  gfxbridge.h
libultraship/src/public/libultra/: os_eeprom.cpp
libultraship/src/resource/: Archive.android_stub.cpp
libultraship/src/resource/archive/: OtrArchive.h
libultraship/src/window/gui/: ConsoleWindow.h  GameOverlay.cpp  GameOverlay.h  Gui.cpp
src/audio/: audio_context.c  audio_general.c  audio_load.c  audio_playback.c  audio_synthesis.c  audio_thread.c
src/engine/: fox_bg.c
src/graphic/Fast3D/: interpreter.h
src/graphic/Fast3D/backends/: gfx_rendering_api.h
src/overlays/ovl_ending/: fox_end2.c
src/port/: Engine.cpp
src/port/extractor/: GameExtractor.h
src/port/resource/importers/audio/: SampleFactory.cpp
src/port/resource/type/audio/: AudioTable.h
src/port/ui/: ImguiUI.cpp  UIWidgets.cpp
